--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Reset IE -->
+    <!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+
+    <!-- Bootstrap CSS http://getbootstrap.com/ -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
+    <!-- Font Awesome icon fonts http://fortawesome.github.io/Font-Awesome/cheatsheet/ -->
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+    
+    <!-- OpenCompany.io CSS -->
     <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
@@ -8,6 +18,11 @@
       <h2>Figwheel template</h2>
       <p>Checkout your developer console.</p>
     </div>
+
+    <!-- Bootstrap JavaScript http://getbootstrap.com/ -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+    <!-- ClojureScript generated JavaScript -->
     <script src="js/compiled/open_company.js" type="text/javascript"></script>
   </body>
 </html>
