add jQuery used by bootstrap

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -9,7 +9,7 @@
 
     <!-- Font Awesome icon fonts http://fortawesome.github.io/Font-Awesome/cheatsheet/ -->
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-    
+
     <!-- OpenCompany.io CSS -->
     <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
@@ -18,7 +18,8 @@
       <h2>Figwheel template</h2>
       <p>Checkout your developer console.</p>
     </div>
-
+    <!-- jQuery needed by Bootstrap JavaScript -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <!-- Bootstrap JavaScript http://getbootstrap.com/ -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
