load google chart lib, initialize it, include normalize.css

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -10,6 +10,9 @@
     <!-- Font Awesome icon fonts http://fortawesome.github.io/Font-Awesome/cheatsheet/ -->
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 
+    <!-- Normalize.css http://necolas.github.io/normalize.css/ -->
+    <link href="css/normalize.css" rel="stylesheet">
+
     <!-- OpenCompany.io CSS -->
     <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
@@ -22,6 +25,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <!-- Bootstrap JavaScript http://getbootstrap.com/ -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <!-- Google Charts https://developers.google.com/chart/ -->
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+    <script type="text/javascript">
+      google.load("visualization", "1", {packages:["corechart"]});
+    </script>
 
     <!-- ClojureScript generated JavaScript -->
     <script src="js/compiled/open_company.js" type="text/javascript"></script>
