--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -11,10 +11,10 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Normalize.css http://necolas.github.io/normalize.css/ -->
-    <link href="css/normalize.css" rel="stylesheet">
+    <link href="/css/normalize.css" rel="stylesheet">
 
     <!-- OpenCompany.io CSS -->
-    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="/css/style.css" rel="stylesheet" type="text/css">
 
     <!-- Raven - Sentry error reporting -->
     <script src="//cdn.ravenjs.com/1.1.15/jquery,native/raven.min.js"></script>
@@ -35,6 +35,6 @@
     </script>
 
     <!-- ClojureScript generated JavaScript -->
-    <script src="js/compiled/open_company.js" type="text/javascript"></script>
+    <script src="/js/compiled/open_company.js" type="text/javascript"></script>
   </body>
 </html>
