add goog/base.js and goog.reqiure main namespace as bootstrap required

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -34,7 +34,10 @@
       google.load("visualization", "1", {packages:["corechart"]});
     </script>
 
+    <!-- Include goog/base.js -->
+    <script src="/js/compiled/out/goog/base.js" type="text/javascript"></script>
     <!-- ClojureScript generated JavaScript -->
     <script src="/js/compiled/open_company.js" type="text/javascript"></script>
+    <script type="text/javascript">goog.require("open_company_web.core");</script>
   </body>
 </html>
