--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -4,13 +4,13 @@
     <!-- Reset IE -->
     <!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 
-    <!-- Bootstrap CSS http://getbootstrap.com/ -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <!-- Bootstrap CSS //getbootstrap.com/ -->
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
-    <!-- Font Awesome icon fonts http://fortawesome.github.io/Font-Awesome/cheatsheet/ -->
+    <!-- Font Awesome icon fonts //fortawesome.github.io/Font-Awesome/cheatsheet/ -->
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 
-    <!-- Normalize.css http://necolas.github.io/normalize.css/ -->
+    <!-- Normalize.css //necolas.github.io/normalize.css/ -->
     <link href="/css/normalize.css" rel="stylesheet">
 
     <!-- OpenCompany.io CSS -->
@@ -25,19 +25,16 @@
       <p>Loading...</p>
     </div>
     <!-- jQuery needed by Bootstrap JavaScript -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <!-- Bootstrap JavaScript http://getbootstrap.com/ -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <!-- Google Charts https://developers.google.com/chart/ -->
-    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <!-- Bootstrap JavaScript //getbootstrap.com/ -->
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <!-- Google Charts //developers.google.com/chart/ -->
+    <script type="text/javascript" src="//www.google.com/jsapi"></script>
     <script type="text/javascript">
       google.load("visualization", "1", {packages:["corechart"]});
     </script>
 
-    <!-- Include goog/base.js -->
-    <script src="/js/compiled/out/goog/base.js" type="text/javascript"></script>
     <!-- ClojureScript generated JavaScript -->
     <script src="/js/compiled/open_company.js" type="text/javascript"></script>
-    <script type="text/javascript">goog.require("open_company_web.core");</script>
   </body>
 </html>
