load scrollTo lib on page load

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -30,6 +30,7 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <!-- Google Charts //developers.google.com/chart/ -->
     <script type="text/javascript" src="//www.google.com/jsapi"></script>
+    <script type="text/javascript" src="/lib/scrollTo/scrollTo.min.js"></script>
     <script type="text/javascript">
       google.load("visualization", "1", {packages:["corechart"]});
     </script>
