add typekit scripts to load webfonts

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -39,5 +39,7 @@
 
     <!-- ClojureScript generated JavaScript -->
     <script src="/js/compiled/open_company.js" type="text/javascript"></script>
+    <script src="https://use.typekit.net/olr5ghy.js"></script>
+    <script>try{Typekit.load({ async: true });}catch(e){}</script>
   </body>
 </html>
