--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -28,9 +28,10 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <!-- Bootstrap JavaScript //getbootstrap.com/ -->
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <!-- jQuery scrollTo plugin -->
+    <script type="text/javascript" src="/lib/scrollTo/scrollTo.min.js"></script>
     <!-- Google Charts //developers.google.com/chart/ -->
     <script type="text/javascript" src="//www.google.com/jsapi"></script>
-    <script type="text/javascript" src="/lib/scrollTo/scrollTo.min.js"></script>
     <script type="text/javascript">
       google.load("visualization", "1", {packages:["corechart"]});
     </script>
