load jquery ui from cdn on page load

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -16,6 +16,9 @@
     <!-- OpenCompany.io CSS -->
     <link href="/css/style.css" rel="stylesheet" type="text/css">
 
+    <!-- jQuery UI CSS -->
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
+
     <!-- Raven - Sentry error reporting -->
     <script src="//cdn.ravenjs.com/1.1.15/jquery,native/raven.min.js"></script>
   </head>
@@ -30,6 +33,8 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <!-- jQuery scrollTo plugin -->
     <script type="text/javascript" src="/lib/scrollTo/scrollTo.min.js"></script>
+    <!-- jQuery UI -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
     <!-- Google Charts //developers.google.com/chart/ -->
     <script type="text/javascript" src="//www.google.com/jsapi"></script>
     <script type="text/javascript">
