load svg replacer script on page load

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -37,6 +37,8 @@
     </script>
     <!-- JWT Decode lib -->
     <script src="/lib/jwt-decode/jwt-decode.min.js" type="text/javascript"></script>
+    <!-- SVG CSS lib -->
+    <script src="/lib/svg-css/svg-css.js" type="text/javascript"></script>
 
     <!-- ClojureScript generated JavaScript -->
     <script src="/js/compiled/open_company.js" type="text/javascript"></script>
