--- a/resources/public/devcards.html
+++ b/resources/public/devcards.html
@@ -16,6 +16,9 @@
     <!-- OpenCompany.io CSS -->
     <link href="/css/style.css" rel="stylesheet" type="text/css">
 
+    <!-- jQuery UI CSS -->
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
+
     <!-- Raven - Sentry error reporting -->
     <script src="//cdn.ravenjs.com/1.1.15/jquery,native/raven.min.js"></script>
   </head>
@@ -24,14 +27,23 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <!-- Bootstrap JavaScript //getbootstrap.com/ -->
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <!-- jQuery scrollTo plugin -->
+    <script type="text/javascript" src="/lib/scrollTo/scrollTo.min.js"></script>
+    <!-- jQuery UI -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
     <!-- Google Charts //developers.google.com/chart/ -->
     <script type="text/javascript" src="//www.google.com/jsapi"></script>
-    <script type="text/javascript" src="/lib/scrollTo/scrollTo.min.js"></script>
     <script type="text/javascript">
       google.load("visualization", "1", {packages:["corechart"]});
     </script>
+    <!-- JWT Decode lib -->
+    <script src="/lib/jwt-decode/jwt-decode.min.js" type="text/javascript"></script>
+    <!-- SVG CSS lib -->
+    <script src="/lib/svg-css/svg-css.js" type="text/javascript"></script>
 
     <!-- ClojureScript generated JavaScript -->
     <script src="/js/compiled/devcards/oc_devcards.js" type="text/javascript"></script>
+    <script src="https://use.typekit.net/olr5ghy.js"></script>
+    <script>try{Typekit.load({ async: true });}catch(e){}</script>
   </body>
 </html>
