Update OPENcompany case in the name.

--- a/resources/public/devcards.html
+++ b/resources/public/devcards.html
@@ -4,7 +4,7 @@
     <!-- Reset IE -->
     <!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 
-    <title>OpenCompany - Devcards</title>
+    <title>OPENcompany - Devcards</title>
 
     <!-- Bootstrap CSS //getbootstrap.com/ -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -15,7 +15,7 @@
     <!-- Normalize.css //necolas.github.io/normalize.css/ -->
     <link href="/css/normalize.css" rel="stylesheet">
 
-    <!-- OpenCompany.io CSS -->
+    <!-- OPENcompany CSS -->
     <link href="/css/style.css" rel="stylesheet" type="text/css">
 
     <!-- jQuery UI CSS -->
