--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -4,7 +4,7 @@
     <!-- Reset IE -->
     <!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 
-    <title>OpenCompany</title>
+    <title>OPENcompany - Leadership with Transparency</title>
 
     <!-- Bootstrap CSS //getbootstrap.com/ -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -15,7 +15,7 @@
     <!-- Normalize.css //necolas.github.io/normalize.css/ -->
     <link href="/css/normalize.css" rel="stylesheet">
 
-    <!-- OpenCompany.io CSS -->
+    <!-- OPENcompany CSS -->
     <link href="/css/style.css" rel="stylesheet" type="text/css">
 
     <!-- jQuery UI CSS -->
@@ -26,7 +26,7 @@
   </head>
   <body>
     <div id="app">
-      <h2>OpenCompany.io</h2>
+      <h2>OPENcompany</h2>
       <p>Loading...</p>
     </div>
     <!-- jQuery needed by Bootstrap JavaScript -->
