HTML only dashboard. Cleanup on core routing and company page. Dashboard components.

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -7,10 +7,10 @@
     <title>OPENcompany - Lead with Transparency</title>
 
     <!-- Bootstrap CSS //getbootstrap.com/ -->
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
     <!-- Font Awesome icon fonts //fortawesome.github.io/Font-Awesome/cheatsheet/ -->
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Normalize.css //necolas.github.io/normalize.css/ -->
     <link href="/css/normalize.css" rel="stylesheet">
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
 
     <!-- Raven - Sentry error reporting -->
-    <script src="//cdn.ravenjs.com/1.1.15/jquery,native/raven.min.js"></script>
+    <script src="//cdn.ravenjs.com/2.0.2/raven.min.js"></script>
   </head>
   <body>
     <div id="app">
@@ -32,7 +32,7 @@
     <!-- jQuery needed by Bootstrap JavaScript -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <!-- Bootstrap JavaScript //getbootstrap.com/ -->
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <!-- jQuery scrollTo plugin -->
     <script type="text/javascript" src="/lib/scrollTo/scrollTo.min.js"></script>
     <!-- jQuery UI -->
@@ -49,6 +49,8 @@
 
     <!-- ClojureScript generated JavaScript -->
     <script src="/js/compiled/open_company.js" type="text/javascript"></script>
+
+    <!-- Adobe Typekit -->    
     <script src="https://use.typekit.net/olr5ghy.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
   </body>
