--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -18,6 +18,9 @@
     <!-- OPENcompany CSS -->
     <link href="/css/style.css" rel="stylesheet" type="text/css">
 
+    <!-- OPENcompany CSS -->
+    <link href="/css/main.css" rel="stylesheet" type="text/css">
+
     <!-- jQuery UI CSS -->
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
 
