--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -23,6 +23,8 @@
 
     <!-- Raven - Sentry error reporting -->
     <script src="//cdn.ravenjs.com/2.0.2/raven.min.js"></script>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
     <div id="app">
