change main and header font to respectively: Lora, serif and Arial

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -24,6 +24,9 @@
     <!-- Raven - Sentry error reporting -->
     <script src="//cdn.ravenjs.com/2.0.2/raven.min.js"></script>
 
+    <!-- Google fonts Lora -->
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic" rel="stylesheet" type="text/css">
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
