--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -27,7 +27,7 @@
     <!-- Google fonts Lora -->
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic" rel="stylesheet" type="text/css">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   </head>
   <body>
     <div id="app">
