--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>OPENcompany - Lead with Transparency</title>
     <!-- Reset IE -->
     <!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
     <!-- Bootstrap CSS //getbootstrap.com/ -->
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <!-- Normalize.css //necolas.github.io/normalize.css/ -->
     <link href="/css/normalize.css?oc_deploy_key" rel="stylesheet">
     <!-- Font Awesome icon fonts //fortawesome.github.io/Font-Awesome/cheatsheet/ -->
@@ -17,7 +17,7 @@
     <!-- OPENcompany CSS -->
     <link href="/css/main.css?oc_deploy_key" rel="stylesheet" type="text/css">
     <!-- jQuery UI CSS -->
-    <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
+    <link href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css" rel="stylesheet">
     <!-- Google fonts Lora -->
     <link href="//fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic" rel="stylesheet" type="text/css">
   </head>
