Update company name and case.

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>OPENcompany - Lead with Transparency</title>
+    <title>OpenCompany - Startup Transparency Made Simple</title>
     <!-- Reset IE -->
     <!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
     <!-- Bootstrap CSS //getbootstrap.com/ -->
@@ -14,7 +14,7 @@
     <link href="/css/normalize.css?oc_deploy_key" rel="stylesheet">
     <!-- Font Awesome icon fonts //fortawesome.github.io/Font-Awesome/cheatsheet/ -->
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
-    <!-- OPENcompany CSS -->
+    <!-- OpenCompany CSS -->
     <link href="/css/main.css?oc_deploy_key" rel="stylesheet" type="text/css">
     <!-- jQuery UI CSS -->
     <link href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css" rel="stylesheet">
@@ -23,7 +23,7 @@
   </head>
   <body>
     <div id="app">
-      <h2>OPENcompany</h2>
+      <h2>OpenCompany</h2>
       <p>Loading...</p>
     </div>
     <!-- Raven - Sentry error reporting -->
