show loading animation until the app is loaded

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -23,9 +23,11 @@
   </head>
   <body>
     <div id="app">
-      <h2>OpenCompany</h2>
-      <p>Loading...</p>
+      <div class="oc-loading active">
+          <div class="oc-loading-internal"></div>
+      </div>
     </div>
+    <div id="oc-loading"></div>
     <!-- Raven - Sentry error reporting -->
     <script src="//cdn.ravenjs.com/2.0.2/raven.min.js"></script>
     <!-- jQuery needed by Bootstrap JavaScript -->
